--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "audiobuffer-to-wav": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.29.4",
@@ -41,9 +42,11 @@
     "next-themes": "^0.2.1",
     "postgres": "^3.4.3",
     "react": "^18",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-resizable-panels": "^2.0.12",
+    "recharts": "^2.12.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.7.1",
