--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-hook-form": "^7.51.0",
     "react-resizable-panels": "^2.0.12",
     "recharts": "^2.12.2",
+    "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.7.1",
