--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@neondatabase/serverless": "^0.9.0",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-hover-card": "^1.0.7",
@@ -29,26 +30,28 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@t3-oss/env-nextjs": "^0.9.2",
     "ably": "^1.2.49",
+    "ai": "^3.0.12",
     "audiobuffer-to-wav": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "cmdk": "^0.2.1",
-    "date-fns": "^3.3.1",
+    "cmdk": "^1.0.0",
+    "date-fns": "^3.5.0",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.29.4",
-    "lucide-react": "^0.344.0",
-    "microsoft-cognitiveservices-speech-sdk": "^1.35.0",
-    "next": "14.1.1",
-    "next-themes": "^0.2.1",
+    "drizzle-orm": "^0.30.2",
+    "lucide-react": "^0.358.0",
+    "microsoft-cognitiveservices-speech-sdk": "^1.36.0",
+    "next": "14.1.3",
+    "next-themes": "^0.3.0",
+    "openai": "^4.29.1",
     "postgres": "^3.4.3",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.0",
-    "react-resizable-panels": "^2.0.12",
-    "recharts": "^2.12.2",
+    "react-hook-form": "^7.51.1",
+    "react-resizable-panels": "^2.0.13",
+    "recharts": "^2.12.3",
     "sonner": "^1.4.3",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.7.1",
     "zod": "^3.22.4",
@@ -64,7 +67,7 @@
     "autoprefixer": "^10.4.18",
     "drizzle-kit": "^0.20.14",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.1.1",
+    "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
