--- a/package.json
+++ b/package.json
@@ -30,27 +30,28 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@t3-oss/env-nextjs": "^0.9.2",
     "ably": "^1.2.49",
-    "ai": "^3.0.12",
+    "ai": "^3.0.13",
     "audiobuffer-to-wav": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
-    "date-fns": "^3.5.0",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.30.2",
-    "lucide-react": "^0.358.0",
+    "drizzle-orm": "^0.30.4",
+    "embla-carousel-react": "^8.0.0",
+    "lucide-react": "^0.363.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.36.0",
-    "next": "14.1.3",
+    "next": "14.1.4",
     "next-themes": "^0.3.0",
-    "openai": "^4.29.1",
-    "postgres": "^3.4.3",
+    "openai": "^4.29.2",
+    "postgres": "^3.4.4",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
     "react-resizable-panels": "^2.0.13",
     "recharts": "^2.12.3",
-    "sonner": "^1.4.3",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.7.1",
@@ -64,10 +65,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.18",
+    "autoprefixer": "^10.4.19",
     "drizzle-kit": "^0.20.14",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.1.3",
+    "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
