--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "englishai",
+  "name": "lingoai",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -42,6 +42,7 @@
     "lucide-react": "^0.363.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.36.0",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "openai": "^4.29.2",
     "postgres": "^3.4.4",
