--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "microsoft-cognitiveservices-speech-sdk": "^1.36.0",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
+    "next-intl": "^3.11.1",
     "next-themes": "^0.3.0",
     "openai": "^4.33.0",
     "postgres": "^3.4.4",
