--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "db:migrate:generate": "drizzle-kit generate:pg"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.552.0",
-    "@aws-sdk/s3-request-presigner": "^3.552.0",
+    "@aws-sdk/client-s3": "^3.554.0",
+    "@aws-sdk/s3-request-presigner": "^3.554.0",
     "@hookform/resolvers": "^3.3.4",
     "@neondatabase/serverless": "^0.9.0",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -24,6 +24,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
@@ -39,13 +40,14 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.30.7",
+    "drizzle-orm": "^0.30.8",
     "embla-carousel-react": "^8.0.2",
     "howler": "^2.2.4",
     "lucide-react": "^0.367.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.36.0",
-    "next": "14.1.4",
+    "next": "14.2.0",
     "next-auth": "^4.24.7",
     "next-intl": "^3.11.1",
     "next-themes": "^0.3.0",
@@ -54,7 +56,7 @@
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.2",
+    "react-hook-form": "^7.51.3",
     "react-resizable-panels": "^2.0.16",
     "recharts": "^2.12.4",
     "sonner": "^1.4.41",
@@ -75,7 +77,7 @@
     "autoprefixer": "^10.4.19",
     "drizzle-kit": "^0.20.14",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.1.4",
+    "eslint-config-next": "14.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.3",
     "typescript": "^5"
