--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "db:migrate:generate": "drizzle-kit generate:pg"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.554.0",
-    "@aws-sdk/s3-request-presigner": "^3.554.0",
+    "@aws-sdk/client-s3": "^3.556.0",
+    "@aws-sdk/s3-request-presigner": "^3.556.0",
     "@hookform/resolvers": "^3.3.4",
-    "@neondatabase/serverless": "^0.9.0",
+    "@neondatabase/serverless": "^0.9.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -24,6 +24,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
@@ -31,10 +32,12 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@t3-oss/env-nextjs": "^0.9.2",
     "ably": "^1.2.49",
-    "ai": "^3.0.21",
+    "ai": "^3.0.24",
     "audiobuffer-to-wav": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -45,25 +48,26 @@
     "drizzle-orm": "^0.30.8",
     "embla-carousel-react": "^8.0.2",
     "howler": "^2.2.4",
-    "lucide-react": "^0.367.0",
+    "lucide-react": "^0.372.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.36.0",
-    "next": "14.2.0",
+    "next": "14.2.2",
     "next-auth": "^4.24.7",
-    "next-intl": "^3.11.1",
+    "next-intl": "^3.11.3",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
-    "openai": "^4.33.0",
+    "openai": "^4.38.2",
     "postgres": "^3.4.4",
     "react": "^18",
-    "react-day-picker": "^8.10.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
-    "react-resizable-panels": "^2.0.16",
-    "recharts": "^2.12.4",
+    "react-resizable-panels": "^2.0.18",
+    "recharts": "^2.12.5",
     "sonner": "^1.4.41",
-    "tailwind-merge": "^2.2.2",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.7.2",
-    "zod": "^3.22.4",
+    "zod": "^3.22.5",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
@@ -71,13 +75,14 @@
     "@types/audiobuffer-to-wav": "^1.0.4",
     "@types/dom-speech-recognition": "^0.0.4",
     "@types/howler": "^2.2.11",
+    "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
-    "drizzle-kit": "^0.20.14",
+    "drizzle-kit": "^0.20.17",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.0",
+    "eslint-config-next": "14.2.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.3",
     "typescript": "^5"
