--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "db:migrate:generate": "drizzle-kit generate:pg"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.556.0",
-    "@aws-sdk/s3-request-presigner": "^3.556.0",
-    "@hookform/resolvers": "^3.3.4",
-    "@neondatabase/serverless": "^0.9.1",
+    "@aws-sdk/client-s3": "^3.588.0",
+    "@aws-sdk/s3-request-presigner": "^3.588.0",
+    "@hookform/resolvers": "^3.4.2",
+    "@neondatabase/serverless": "^0.9.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -35,39 +35,40 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@t3-oss/env-nextjs": "^0.9.2",
+    "@t3-oss/env-nextjs": "^0.10.1",
     "ably": "^1.2.49",
-    "ai": "^3.0.24",
+    "ai": "^3.1.23",
     "audiobuffer-to-wav": "^1.0.0",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.30.8",
-    "embla-carousel-react": "^8.0.2",
+    "drizzle-orm": "^0.31.0",
+    "embla-carousel-react": "^8.1.3",
     "howler": "^2.2.4",
-    "lucide-react": "^0.372.0",
+    "lucide-react": "^0.383.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.36.0",
-    "next": "14.2.2",
+    "next": "14.2.3",
     "next-auth": "^4.24.7",
-    "next-intl": "^3.11.3",
+    "next-intl": "^3.14.1",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
-    "openai": "^4.38.2",
+    "openai": "^4.47.3",
     "postgres": "^3.4.4",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.3",
-    "react-resizable-panels": "^2.0.18",
-    "recharts": "^2.12.5",
+    "react-google-recaptcha-v3": "^1.10.1",
+    "react-hook-form": "^7.51.5",
+    "react-resizable-panels": "^2.0.19",
+    "recharts": "^2.12.7",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.7.2",
-    "zod": "^3.22.5",
+    "tsx": "^4.11.2",
+    "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
@@ -80,9 +81,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
-    "drizzle-kit": "^0.20.17",
+    "drizzle-kit": "^0.22.1",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.2",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.3",
     "typescript": "^5"
