--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "ably": "^1.2.49",
     "ai": "^3.1.23",
+    "animejs": "^3.2.2",
     "audiobuffer-to-wav": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -73,6 +74,7 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
+    "@types/animejs": "^3.1.12",
     "@types/audiobuffer-to-wav": "^1.0.4",
     "@types/dom-speech-recognition": "^0.0.4",
     "@types/howler": "^2.2.11",
