--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint",
     "db:seed": "tsx src/lib/db/drizzle/seed.ts",
     "db:migrate:run": "tsx src/lib/db/drizzle/migrate.ts",
-    "db:migrate:generate": "drizzle-kit generate:pg"
+    "db:migrate:generate": "drizzle-kit generate"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.588.0",
-    "@aws-sdk/s3-request-presigner": "^3.588.0",
-    "@hookform/resolvers": "^3.4.2",
+    "@akashrajpurohit/snowflake-id": "^2.0.0",
+    "@aws-sdk/client-s3": "^3.596.0",
+    "@aws-sdk/s3-request-presigner": "^3.596.0",
+    "@hookform/resolvers": "^3.6.0",
     "@neondatabase/serverless": "^0.9.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.0.3",
@@ -37,7 +38,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@t3-oss/env-nextjs": "^0.10.1",
     "ably": "^1.2.49",
-    "ai": "^3.1.23",
+    "ai": "^3.1.33",
     "animejs": "^3.2.2",
     "audiobuffer-to-wav": "^1.0.0",
     "class-variance-authority": "^0.7.0",
@@ -46,17 +47,17 @@
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.31.0",
-    "embla-carousel-react": "^8.1.3",
+    "drizzle-orm": "^0.31.2",
+    "embla-carousel-react": "^8.1.5",
     "howler": "^2.2.4",
-    "lucide-react": "^0.383.0",
-    "microsoft-cognitiveservices-speech-sdk": "^1.36.0",
-    "next": "14.2.3",
+    "lucide-react": "^0.394.0",
+    "microsoft-cognitiveservices-speech-sdk": "^1.38.0",
+    "next": "14.2.4",
     "next-auth": "^4.24.7",
-    "next-intl": "^3.14.1",
+    "next-intl": "^3.15.0",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
-    "openai": "^4.47.3",
+    "openai": "^4.51.0",
     "postgres": "^3.4.4",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -65,14 +66,15 @@
     "react-hook-form": "^7.51.5",
     "react-resizable-panels": "^2.0.19",
     "recharts": "^2.12.7",
-    "sonner": "^1.4.41",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.11.2",
+    "tsx": "^4.15.2",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@kamona/tailwindcss-perspective": "^0.1.1",
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/animejs": "^3.1.12",
     "@types/audiobuffer-to-wav": "^1.0.4",
@@ -83,11 +85,11 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
-    "drizzle-kit": "^0.22.1",
+    "drizzle-kit": "^0.22.7",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "14.2.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
 }
