--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@typebot.io/js": "^0.2.92",
+    "@typebot.io/nextjs": "^0.2.92",
     "ably": "^1.2.49",
     "ai": "^3.2.5",
     "animejs": "^3.2.2",
