--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,26 +5,26 @@
     "scope": "/",
     "start_url": "/",
     "name": "Xinglingo",
-    "short_name": "xinglingo",
+    "short_name": "Xinglingo",
     "description": "Utilizamos intelig\u00eancia artificial para tornar o aprendizado de um novo idioma mais simples e eficaz. Por meio de algoritmos avan\u00e7ados de IA, oferecemos experi\u00eancias de aprendizado personalizadas que se adaptam \u00e0s suas necessidades e ritmo individuais.",
     "icons": [
         {
-            "src": "/icon-192x192.png",
+            "src": "/assets/imgs/icons/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/icon-256x256.png",
+            "src": "/assets/imgs/icons/icon-256x256.png",
             "sizes": "256x256",
             "type": "image/png"
         },
         {
-            "src": "/icon-384x384.png",
+            "src": "/assets/imgs/icons/icon-384x384.png",
             "sizes": "384x384",
             "type": "image/png"
         },
         {
-            "src": "/icon-512x512.png",
+            "src": "/assets/imgs/icons/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
