--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   },
   "dependencies": {
     "@akashrajpurohit/snowflake-id": "^2.0.0",
-    "@aws-sdk/client-s3": "^3.600.0",
-    "@aws-sdk/s3-request-presigner": "^3.600.0",
-    "@hookform/resolvers": "^3.6.0",
-    "@neondatabase/serverless": "^0.9.3",
+    "@aws-sdk/client-s3": "^3.609.0",
+    "@aws-sdk/s3-request-presigner": "^3.609.0",
+    "@hookform/resolvers": "^3.7.0",
+    "@neondatabase/serverless": "^0.9.4",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -36,14 +36,17 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@stripe/react-stripe-js": "^2.7.3",
+    "@stripe/stripe-js": "^4.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
-    "@typebot.io/js": "^0.2.92",
-    "@typebot.io/nextjs": "^0.2.92",
+    "@typebot.io/js": "^0.3.3",
+    "@typebot.io/nextjs": "^0.3.3",
     "ably": "^1.2.49",
-    "ai": "^3.2.5",
+    "ai": "^3.2.16",
     "animejs": "^3.2.2",
     "audiobuffer-to-wav": "^1.0.0",
+    "bignumber.js": "^9.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -51,30 +54,31 @@
     "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
-    "embla-carousel-react": "^8.1.5",
+    "embla-carousel-react": "^8.1.6",
     "howler": "^2.2.4",
-    "lucide-react": "^0.396.0",
+    "lucide-react": "^0.400.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.38.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
-    "next-intl": "^3.15.2",
+    "next-intl": "^3.15.3",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
-    "openai": "^4.52.0",
+    "openai": "^4.52.3",
     "postgres": "^3.4.4",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-google-recaptcha-v3": "^1.10.1",
-    "react-hook-form": "^7.52.0",
-    "react-resizable-panels": "^2.0.19",
+    "react-hook-form": "^7.52.1",
+    "react-resizable-panels": "^2.0.20",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
+    "stripe": "^16.1.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.15.7",
+    "tsx": "^4.16.2",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@kamona/tailwindcss-perspective": "^0.1.1",
@@ -88,7 +92,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
-    "drizzle-kit": "^0.22.7",
+    "drizzle-kit": "^0.22.8",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
