--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/s3-request-presigner": "^3.614.0",
     "@hookform/resolvers": "^3.9.0",
     "@neondatabase/serverless": "^0.9.4",
+    "@next/third-parties": "^14.2.5",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -40,10 +41,10 @@
     "@stripe/react-stripe-js": "^2.7.3",
     "@stripe/stripe-js": "^4.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
-    "@typebot.io/js": "^0.3.4",
-    "@typebot.io/nextjs": "^0.3.4",
+    "@typebot.io/js": "^0.3.6",
+    "@typebot.io/nextjs": "^0.3.6",
     "ably": "^1.2.49",
-    "ai": "^3.2.22",
+    "ai": "^3.2.23",
     "animejs": "^3.2.2",
     "audiobuffer-to-wav": "^1.0.0",
     "bignumber.js": "^9.1.2",
@@ -60,7 +61,7 @@
     "microsoft-cognitiveservices-speech-sdk": "^1.38.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
-    "next-intl": "^3.17.0",
+    "next-intl": "^3.17.1",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
     "openai": "^4.52.7",
@@ -96,7 +97,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^3.4.5",
     "typescript": "^5"
   }
 }
