--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "@akashrajpurohit/snowflake-id": "^2.0.0",
-    "@aws-sdk/client-s3": "^3.614.0",
-    "@aws-sdk/s3-request-presigner": "^3.614.0",
+    "@aws-sdk/client-s3": "^3.616.0",
+    "@aws-sdk/s3-request-presigner": "^3.616.0",
     "@hookform/resolvers": "^3.9.0",
     "@neondatabase/serverless": "^0.9.4",
     "@next/third-parties": "^14.2.5",
@@ -44,7 +44,7 @@
     "@typebot.io/js": "^0.3.6",
     "@typebot.io/nextjs": "^0.3.6",
     "ably": "^1.2.49",
-    "ai": "^3.2.23",
+    "ai": "^3.2.32",
     "animejs": "^3.2.2",
     "audiobuffer-to-wav": "^1.0.0",
     "bignumber.js": "^9.1.2",
@@ -55,13 +55,13 @@
     "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.0",
-    "embla-carousel-react": "^8.1.6",
+    "embla-carousel-react": "^8.1.7",
     "howler": "^2.2.4",
-    "lucide-react": "^0.408.0",
+    "lucide-react": "^0.411.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.38.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
-    "next-intl": "^3.17.1",
+    "next-intl": "^3.17.2",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
     "openai": "^4.52.7",
@@ -71,11 +71,12 @@
     "react-dom": "^18",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.52.1",
-    "react-resizable-panels": "^2.0.20",
+    "react-resizable-panels": "^2.0.21",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "stripe": "^16.2.0",
     "tailwind-merge": "^2.4.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.16.2",
     "zod": "^3.23.8",
@@ -97,7 +98,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
-    "tailwindcss": "^3.4.5",
+    "tailwindcss": "^3.4.6",
     "typescript": "^5"
   }
 }
