--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "lingosai",
   "version": "0.1.0",
+  "type": "commonjs",
+  "engines": {
+    "node": ">=18"
+  },
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -13,9 +17,14 @@
   },
   "dependencies": {
     "@akashrajpurohit/snowflake-id": "^2.0.0",
-    "@aws-sdk/client-s3": "^3.616.0",
-    "@aws-sdk/s3-request-presigner": "^3.616.0",
+    "@aws-sdk/client-s3": "^3.622.0",
+    "@aws-sdk/s3-request-presigner": "^3.622.0",
     "@hookform/resolvers": "^3.9.0",
+    "@langchain/anthropic": "^0.2.11",
+    "@langchain/community": "^0.2.22",
+    "@langchain/core": "0.2.19",
+    "@langchain/langgraph": "^0.0.31",
+    "@langchain/openai": "^0.2.5",
     "@neondatabase/serverless": "^0.9.4",
     "@next/third-parties": "^14.2.5",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -40,13 +49,14 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@stripe/react-stripe-js": "^2.7.3",
     "@stripe/stripe-js": "^4.1.0",
-    "@t3-oss/env-nextjs": "^0.10.1",
-    "@typebot.io/js": "^0.3.6",
-    "@typebot.io/nextjs": "^0.3.6",
+    "@t3-oss/env-nextjs": "^0.11.0",
+    "@typebot.io/js": "^0.3.7",
+    "@typebot.io/nextjs": "^0.3.7",
     "ably": "^1.2.49",
-    "ai": "^3.2.32",
+    "ai": "^3.2.45",
     "animejs": "^3.2.2",
     "audiobuffer-to-wav": "^1.0.0",
+    "axios": "^1.7.3",
     "bignumber.js": "^9.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -54,32 +64,35 @@
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.32.0",
-    "embla-carousel-react": "^8.1.7",
+    "drizzle-orm": "^0.32.1",
+    "embla-carousel-react": "^8.1.8",
     "howler": "^2.2.4",
-    "lucide-react": "^0.411.0",
+    "langchain": "0.2.12",
+    "langsmith": "^0.1.40",
+    "lucide-react": "^0.419.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.38.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "next-intl": "^3.17.2",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
-    "openai": "^4.52.7",
+    "openai": "^4.53.2",
     "postgres": "^3.4.4",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.52.1",
-    "react-resizable-panels": "^2.0.21",
+    "react-resizable-panels": "^2.0.22",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
-    "stripe": "^16.2.0",
+    "stripe": "^16.6.0",
     "tailwind-merge": "^2.4.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.16.2",
+    "tsx": "^4.16.5",
     "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.23.2",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
@@ -90,15 +103,20 @@
     "@types/dom-speech-recognition": "^0.0.4",
     "@types/howler": "^2.2.11",
     "@types/next-pwa": "^5.6.9",
-    "@types/node": "^20",
+    "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
-    "drizzle-kit": "^0.23.0",
+    "drizzle-kit": "^0.23.1",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
-    "tailwindcss": "^3.4.6",
+    "tailwindcss": "^3.4.7",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "overrides": {
+      "@langchain/core": "0.2.19"
+    }
   }
 }
